--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         applicationId "net.ypresto.androidtranscoder.example"
         minSdkVersion 18
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -20,6 +20,6 @@ android {
 }
 
 dependencies {
-    compile project(':lib')
-    compile 'com.android.support:support-core-utils:24.2.0'
+    implementation project(':lib')
+    implementation 'com.android.support:support-core-utils:27.1.1'
 }
